# falling-sand

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  mingw-toolchain.cmake
include/: Cell.hpp  GUI.hpp  Game.hpp  Grid.hpp
src/: Cell.cpp  Game.cpp  Grid.cpp  Main.cpp
